Shadow alignment fixed

--- a/src/input.css
+++ b/src/input.css
@@ -63,6 +63,8 @@ body {
   margin: 0px 0px 0px 0px;
   min-width: 100%;
   font-size: var(--step--1);
+  -webkit-text-fill-color: #333;
+
   /* overflow: auto; */
 }
 
@@ -228,8 +230,7 @@ hr::after {
   flex-shrink: 1;
   /* base  337.5 x 464*/
   z-index: 4;
-  /* max-width: 450px; base  337.5 / 0.75 */
-  /* max-height: 650px; base  464 / 0.75 */
+  top: -20%;
   min-width: 1000px;
   min-height: 800px;
   margin: auto;
@@ -300,12 +301,12 @@ hr::after {
   min-width: 20%;
   width: 10%;
   /* left: -2px; */
-  box-shadow: -30px -60px 30px rgb(0, 0, 0, 0.3);
-  /* transform: skewY(9deg); */
-  border-radius: 45%;
+  box-shadow: -50px -80px 30px rgb(0, 0, 0, 0.3);
+  transform: skewY(9deg);
+  border-radius: 40%;
   z-index: -1;
   filter: blur(2px);
-  transform: translate(45%, -5%) rotate(-50deg) skewY(9deg);
+  transform: translate(53%, 10%) rotate(-50deg) skewY(9deg);
   will-change: unset !important;
   grid-column-start: 1;
 }
